--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 :root {
   --accent-color: #2196f3;
   --main-font: 'Roboto', sans-serif;
@@ -19,7 +18,7 @@ body {
   font-family: var(--main-font);
   color: var(--title-color);
 }
-h1, 
+h1,
 h2,
 h3,
 h4,
@@ -29,7 +28,8 @@ p {
   margin-top: 0;
   margin-bottom: 0;
 }
-ul, li {
+ul,
+li {
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
@@ -38,44 +38,43 @@ img {
   display: block;
 }
 
-  /* COMPONENTS */
-  .container {
-    width: 1200px;
-    margin: 0 auto;
-    padding-right: 15px;
-    padding-left: 15px;
-  }
+/* COMPONENTS */
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding-right: 15px;
+  padding-left: 15px;
+}
 
-  .section {
-    padding-bottom: 94px;
-    padding-top: 94px;
-  }
-  /* HEADER */
-  .header-container {
-    display: flex;
-    align-items: center;
-  }
-  .header {
-    padding-top: 35px;
-    padding-bottom: 35px;
-    border: 1px solid #ECECEC;
-  }
-  .navigation {
-    display: flex;
-    align-items: center;
-  }
-  .list {
-    display: flex;
-    align-items: center;
-    margin-left: auto;
-  }
+.section {
+  padding-bottom: 94px;
+  padding-top: 94px;
+}
+/* HEADER */
+.header-container {
+  display: flex;
+  align-items: center;
+}
+.header {
+  padding-top: 35px;
+  padding-bottom: 35px;
+  border: 1px solid #ececec;
+}
+.navigation {
+  display: flex;
+  align-items: center;
+}
+.list {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
 /* Logo */
 .logo {
   margin-right: 87px;
 }
 .logo,
 .logo-item {
-
   font-family: var(--secondary-font);
   font-weight: var(--main-font-weight);
   font-size: 26px;
@@ -88,31 +87,36 @@ img {
   color: var(--accent-color);
 }
 
-
 /* Navigation */
 .nav-item:not(:last-child) {
-   margin-right: 50px; 
+  margin-right: 50px;
 }
 
 .nav-link,
-.contact {
+.contact,
+.contact-mail {
   font-family: var(--main-font);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   color: var(--title-color);
   text-align: left;
-  }
- .contact-mail {
-   margin-left: auto;
-   margin-right: 50px;
- }
-  .contact {
-    color: var(--text-color);
-  }
+}
+.contact-mail {
+  margin-left: auto;
+  margin-right: 50px;
+  color: var(--text-color);
+}
+.contact {
+  color: var(--text-color);
+}
 
 .nav-link:hover,
 .nav-link:focus {
+  color: var(--accent-color);
+}
+.contact-mail:hover,
+.contact-mail:focus {
   color: var(--accent-color);
 }
 .contact:hover,
@@ -122,39 +126,37 @@ img {
 /* Hero */
 .hero {
   padding-top: 200px;
-  padding-bottom: 280px; 
+  padding-bottom: 280px;
   text-align: center;
   background-color: #2f303a;
 }
 .title {
-  
   font-family: var(--main-font);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  color: #ffffff; 
+  color: #ffffff;
   text-transform: uppercase;
   text-align: center;
   letter-spacing: 0.06em;
-
 }
 .modal-btn {
-padding: 10px, 32px;
-left: 715px;
-top: 430px;
-background: #2196F3;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
-margin-top: 30px;
-font-family: var(--main-font);
-font-weight: var(--main-font-weight);
-font-size: 16px;
-line-height: 1.9;
-text-align: center;
-color: #ffffff;
-background-color: var(--accent-color);
-cursor: pointer;
-border: none;
+  padding: 10px, 32px;
+  left: 715px;
+  top: 430px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  margin-top: 30px;
+  font-family: var(--main-font);
+  font-weight: var(--main-font-weight);
+  font-size: 16px;
+  line-height: 1.9;
+  text-align: center;
+  color: #ffffff;
+  background-color: var(--accent-color);
+  cursor: pointer;
+  border: none;
 }
 .modal-btn:hover,
 .modal-btn:focus {
@@ -163,29 +165,32 @@ border: none;
 }
 /* Our advantages */
 
-/* .visually-hidden {
+.visually-hidden {
   position: absolute;
   clip: rect(0 0 0 0);
   width: 1px;
-}  */
+}
 
-.about-list {
+.about-item {
   display: flex;
+  flex-wrap: wrap;
   margin-left: -30px;
-  margin-top: -10px; 
+  margin-top: -10px;
+  outline: 1px solid red;
 }
 .advantages {
-  flex-basis: calc((100% - 90px) / 3);
+  flex-basis: calc((100% - 120px) / 4);
   margin-left: 30px;
   margin-top: 10px;
 }
 .about-us {
+  padding-bottom: 10px;
   font-family: var(--main-font);
   font-weight: var(--main-font-weight);
   font-size: 14px;
   line-height: 1.14;
-letter-spacing: 0.03em;
-text-transform: uppercase;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
   text-align: left;
   color: var(--title-color);
 }
@@ -201,7 +206,7 @@ text-transform: uppercase;
 .our-work {
   display: flex;
   flex-wrap: wrap;
-   margin-top: -50px;
+  margin-top: -50px;
   margin-left: -30px;
 }
 .work-img {
@@ -228,6 +233,10 @@ text-transform: uppercase;
   flex-basis: calc ((100% - 120px) / 4);
   margin-left: 30px;
   margin-top: 50px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .subtitle-photo-name {
   margin-bottom: 10px;
@@ -249,52 +258,49 @@ text-transform: uppercase;
 /* Footer */
 
 .footer {
- padding-top: 60px;
- padding-bottom: 60px;
-background-color: #2F303A;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2f303a;
 }
-.footer-item {
-  flex-direction: column;
-}
+
 .footer-contact {
   list-style: none;
 }
-.logo-footer
- {
-   padding-top: 60px;
+.logo-footer {
+  /* padding-top: 60px; */
   font-family: var(--secondary-font);
   font-weight: var(--main-font-weight);
   font-size: 26px;
   line-height: 1.19;
-   color: #FFFFFF; 
+  color: #ffffff;
   text-align: left;
 }
 
 .contact-info-address {
- margin-top: 20px;
-font-weight: var(--secondary-font-weight);
-font-size: 14px;
-line-height: 1.71;
-text-align: left;
-color: #FFFFFF; 
+  margin-top: 20px;
+  font-weight: var(--secondary-font-weight);
+  font-size: 14px;
+  line-height: 1.71;
+  text-align: left;
+  color: #ffffff;
 }
 .contact-info-address:hover,
-.contact-info-address:focus{
+.contact-info-address:focus {
   color: var(--accent-color);
 }
 .contact-info-mail,
 .contact-info-phone {
-margin-top: 9px;
- font-weight: var(--secondary-font-weight);
-font-size: 14px;
-line-height: 1.71;
-text-align: left;
-color: var(--text-color);
+  margin-top: 9px;
+  font-weight: var(--secondary-font-weight);
+  font-size: 14px;
+  line-height: 1.71;
+  text-align: left;
+  color: var(--text-color);
 }
 .contact-info-mail:hover,
 .contact-info-mail:focus {
-  color: var(--accent-color);  
-} 
+  color: var(--accent-color);
+}
 .contact-info-phone:hover,
 .contact-info-phone:focus {
   color: var(--accent-color);
@@ -316,8 +322,10 @@ color: var(--text-color);
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
-  /* color: var(--title-color); */
+  letter-spacing: 0.03em;
+  color: var(--title-color);
   background-color: #f5f4fa;
+  border: none;
   border-radius: 4px;
   cursor: pointer;
 }
@@ -337,24 +345,26 @@ color: var(--text-color);
   flex-basis: calc ((100% - 270px) / 9);
   margin-left: 30px;
   margin-top: 30px;
-  outline: 1px solid #EEEEEE;
-  
+  outline: 1px solid #eeeeee;
+}
+.project-border {
+  margin-bottom: 79px;
 }
 .project {
   padding-top: 20px;
   padding-bottom: 4px;
-  background: #FFFFFF;
+  background: #ffffff;
   font-weight: 700;
-  font-size;: 18px
+  font-size: 18px;
   line-height: 2;
   text-align: left;
   color: var(--title-color);
 }
 .project-type {
-font-weight: var(--secondary-font-weight);
-font-size: 16px;
-line-height: 1.87;
-text-align: left;
-letter-spacing: 3%;
-color: var(--text-color)
+  font-weight: var(--secondary-font-weight);
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: left;
+  letter-spacing: 3%;
+  color: var(--text-color);
 }
