--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,7 @@ img {
   font-family: var(--secondary-font);
   font-weight: var(--main-font-weight);
   font-size: 26px;
+  letter-spacing: 0.03em;
   line-height: 1.19;
   color: #000000;
   text-align: left;
@@ -98,6 +99,7 @@ img {
   font-family: var(--main-font);
   font-weight: 500;
   font-size: 14px;
+  letter-spacing: 0.02em;
   line-height: 1.14;
   color: var(--title-color);
   text-align: left;
@@ -152,6 +154,7 @@ img {
   font-weight: var(--main-font-weight);
   font-size: 16px;
   line-height: 1.9;
+  letter-spacing: 0.06em;
   text-align: center;
   color: #ffffff;
   background-color: var(--accent-color);
@@ -176,7 +179,6 @@ img {
   flex-wrap: wrap;
   margin-left: -30px;
   margin-top: -10px;
-  outline: 1px solid red;
 }
 .advantages {
   flex-basis: calc((100% - 120px) / 4);
@@ -198,6 +200,7 @@ img {
   font-family: var(--main-font);
   font-weight: var(--secondary-font-weight);
   font-size: 14px;
+  letter-spacing: 0.03em;
   line-height: 1.71;
   text-align: left;
   color: var(--text-color);
@@ -218,6 +221,7 @@ img {
   font-family: var(--main-font);
   font-weight: var(--main-font-weight);
   font-size: 36px;
+  letter-spacing: 0.03em;
   line-height: 2.62;
   text-align: center;
   color: var(--title-color);
@@ -243,6 +247,7 @@ img {
   font-family: var(--main-font);
   font-weight: 500;
   font-size: 16px;
+  letter-spacing: 0.03em;
   line-height: 1.18;
   text-align: center;
   color: var(--title-color);
@@ -251,6 +256,7 @@ img {
   font-family: var(--main-font);
   font-weight: var(--secondary-font-weight);
   font-size: 16px;
+  letter-spacing: 0.03em;
   line-height: 1.18;
   text-align: center;
   color: var(--text-color);
@@ -271,6 +277,7 @@ img {
   font-family: var(--secondary-font);
   font-weight: var(--main-font-weight);
   font-size: 26px;
+  letter-spacing: 0.03em;
   line-height: 1.19;
   color: #ffffff;
   text-align: left;
@@ -280,6 +287,7 @@ img {
   margin-top: 20px;
   font-weight: var(--secondary-font-weight);
   font-size: 14px;
+  letter-spacing: 0.03em;
   line-height: 1.71;
   text-align: left;
   color: #ffffff;
@@ -293,6 +301,7 @@ img {
   margin-top: 9px;
   font-weight: var(--secondary-font-weight);
   font-size: 14px;
+  letter-spacing: 0.03em;
   line-height: 1.71;
   text-align: left;
   color: var(--text-color);
@@ -356,6 +365,7 @@ img {
   background: #ffffff;
   font-weight: 700;
   font-size: 18px;
+  letter-spacing: 0.06em;
   line-height: 2;
   text-align: left;
   color: var(--title-color);
@@ -363,8 +373,8 @@ img {
 .project-type {
   font-weight: var(--secondary-font-weight);
   font-size: 16px;
+  letter-spacing: 0.03em;
   line-height: 1.87;
   text-align: left;
-  letter-spacing: 3%;
   color: var(--text-color);
 }
