--- a/css/styles.css
+++ b/css/styles.css
@@ -247,7 +247,7 @@ img {
   margin-top: -50px;
 }
 .team-desc {
-  flex-basis: calc ((100% - 120px) / 4);
+  flex-basis: calc((100% - 120px) / 4);
   margin-left: 30px;
   margin-top: 50px;
   background: #ffffff;
@@ -300,7 +300,7 @@ img {
   text-align: left;
 }
 
-.footer-item {
+.footer-item:not(:last-child) {
   margin-bottom: 9px;
 }
 
